@@ -671,9 +671,10 @@ test_bus_open (void)
 	err = nih_error_get ();
 	TEST_EQ (err->number, NIH_DBUS_ERROR);
 	/* Under valgrind we seem to get NoReply instead */
-	if (strcmp (((NihDBusError *)err)->name, DBUS_ERROR_NO_REPLY))
+	if (strcmp (((NihDBusError *)err)->name, DBUS_ERROR_NO_REPLY)) {
 		TEST_EQ_STR (((NihDBusError *)err)->name,
 			     DBUS_ERROR_DISCONNECTED);
+	}
 	nih_free (err);
 
 	kill (pid, SIGTERM);
